[package]
name = "scintilla-sys"
version = "4.0.2"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
description = "Raw bindings to Scintilla Text Editor component"
homepage = "https://github.com/plyhun/plygui-scintilla"
repository = "https://github.com/plyhun/plygui-scintilla"
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "scintilla"

[lib]
name = "scintilla_sys"
path = "src/lib.rs"

[dependencies]
libc = "~0.2"
qt_core = {version = "~0.2", optional = true}
qt_gui = {version = "~0.2", optional = true}
qt_widgets = {version = "~0.2", optional = true}
cpp_utils = {version = "~0.2", optional = true}
qt_core_custom_events = {version = "*", path = "../qt_core_custom_events", optional = true}

gtk = { version = "^0.4", features = ["v3_18"], optional = true }
glib = { version = "^0.5", optional = true }
glib-sys = { version = "^0.6", optional = true }
gobject-sys = { version = "^0.6", optional = true }
gtk-sys = { version = "^0.6", optional = true }

[features]
win32 = ["cc", "embed-resource"]
gtk3 = ["cc","gtk","glib","glib-sys","gtk-sys","gobject-sys","pkg-config"]
qt5 = ["cc","qt_core","qt_gui","qt_widgets","qt_core_custom_events","cpp_utils"]
curses = ["cc", "embed-resource"]
cocoa = ["cc"]
default = []

[build-dependencies]
cc = { version = "~1.0", optional = true }
embed-resource = { version = "~1.1", optional = true }
pkg-config = { version = "^0.3", optional = true }
