[package]
name = "scintilla-sys"
#version = "4.0.2" # this is the actual Scintilla version
version = "4.0.9"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
description = "Raw bindings to Scintilla Text Editor component"
homepage = "https://github.com/snuk182/scintilla-sys-rs"
repository = "https://github.com/snuk182/scintilla-sys-rs"
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "scintilla"

[lib]
name = "scintilla_sys"
path = "src/lib.rs"

[dependencies]
libc = "~0.2"
qt_core = {version = "^0.5", optional = true}
qt_gui = {version = "^0.5", optional = true}
qt_widgets = {version = "^0.5", optional = true}
qt_core_custom_events = {version = "~0.2", optional = true}

gtk = { version = "^0.4", features = ["v3_18"], optional = true }
glib = { version = "^0.5", optional = true }
glib-sys = { version = "^0.6", optional = true }
gobject-sys = { version = "^0.6", optional = true }
gtk-sys = { version = "^0.6", optional = true }

[features]
win32 = ["cc", "embed-resource"]
gtk3 = ["cc","gtk","glib","glib-sys","gtk-sys","gobject-sys","pkg-config"]
qt5 = ["cc","qt_core","qt_gui","qt_widgets","qt_core_custom_events"]
curses = ["cc", "embed-resource"]
cocoa = ["cc","fs_extra"]
default = []

[build-dependencies]
cc = { version = "~1.0", optional = true }
embed-resource = { version = "~1.3", optional = true }
pkg-config = { version = "^0.3", optional = true }
fs_extra = { version = "~1.1", optional = true }
